; ModuleID = '/home/carl/AnghaBench/libgit2/tests/index/extr_tests.c_test_index_tests__empty_index.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/index/extr_tests.c_test_index_tests__empty_index.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i64, i32 }

@.str = private unnamed_addr constant [16 x i8] c"in-memory-index\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_index_tests__empty_index() #0 {
  %1 = alloca %struct.TYPE_5__*, align 8
  %2 = call i32 @git_index_open(%struct.TYPE_5__** %1, i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str, i64 0, i64 0))
  %3 = call i32 @cl_git_pass(i32 %2)
  %4 = load %struct.TYPE_5__*, %struct.TYPE_5__** %1, align 8
  %5 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %4, i32 0, i32 0
  %6 = load i64, i64* %5, align 8
  %7 = icmp eq i64 %6, 0
  %8 = zext i1 %7 to i32
  %9 = call i32 @cl_assert(i32 %8)
  %10 = load %struct.TYPE_5__*, %struct.TYPE_5__** %1, align 8
  %11 = call i64 @git_index_entrycount(%struct.TYPE_5__* %10)
  %12 = icmp eq i64 %11, 0
  %13 = zext i1 %12 to i32
  %14 = call i32 @cl_assert(i32 %13)
  %15 = load %struct.TYPE_5__*, %struct.TYPE_5__** %1, align 8
  %16 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %15, i32 0, i32 1
  %17 = call i32 @git_vector_is_sorted(i32* %16)
  %18 = call i32 @cl_assert(i32 %17)
  %19 = load %struct.TYPE_5__*, %struct.TYPE_5__** %1, align 8
  %20 = call i32 @git_index_free(%struct.TYPE_5__* %19)
  ret void
}

declare dso_local i32 @cl_git_pass(i32) #1

declare dso_local i32 @git_index_open(%struct.TYPE_5__**, i8*) #1

declare dso_local i32 @cl_assert(i32) #1

declare dso_local i64 @git_index_entrycount(%struct.TYPE_5__*) #1

declare dso_local i32 @git_vector_is_sorted(i32*) #1

declare dso_local i32 @git_index_free(%struct.TYPE_5__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
